[BE,DOC,FE] API Get All Vehicle Name, Some Design Fixes
